validation process in progress

--- a/passes-management/.web/routes/registrants-list/registrantsList.scss
+++ b/passes-management/.web/routes/registrants-list/registrantsList.scss
@@ -18,4 +18,11 @@
 
 .registrants-list .glyphicon {
     font-size: 2em;
+    transition: color 1s ease;
+    &.success {
+        color: green;
+    }
+    &.error {
+        color: red;
+    }
 }
